LinuxHelper: revamp